<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Lab 2 GUI:</string>
    <string name="ButtonText">click here</string>
    <string name="CheckBoxText">Check this out</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_text">Switch on/off</string>
    <string name="hint_text">Enter Name Here</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_off">The switch is now off</string>
    <string name="email_message">Enter your email address:</string>
    <string name="email_hint">Type email here</string>
    <string name="passwd_message">Type your password:</string>
    <string name="loginBtn">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name_info">Your name:</string>
    <string name="email_info">Your email:</string>
    <string name="pic_info">Your picture:</string>
    <string name="btn_info">Click the button above to take a picture</string>
    <string name="email_hint2">Enter your email</string>
    <string name="name_hint">Enter your name</string>
    <string name="btn_chat">Go to the chatroom</string>
    <string name="chatTextHint">Type here</string>
    <string name="btn_send">SEND</string>
    <string name="btn_receive">RECEIVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>