<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"

    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"

    >

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/nameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"

        android:nextFocusDown="@id/nameID"
        android:nextFocusUp="@id/emailID"
        android:nextFocusRight="@id/btn_chat"
        android:nextFocusLeft="@id/btn_weather"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/emailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint2"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"

        android:nextFocusDown="@id/nameID"
        android:nextFocusUp="@id/emailID"
        android:nextFocusRight="@id/btn_chat"
        android:nextFocusLeft="@id/btn_weather"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/imgBtn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"

        android:src="@android:drawable/picture_frame"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_chat"

        android:nextFocusDown="@id/nameID"
        android:nextFocusUp="@id/emailID"
        android:nextFocusRight="@id/btn_chat"
        android:nextFocusLeft="@id/btn_weather"
        />

    <Button
        android:id="@+id/btn_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weather Forecast"

        android:nextFocusDown="@id/nameID"
        android:nextFocusUp="@id/emailID"
        android:nextFocusRight="@id/btn_chat"
        android:nextFocusLeft="@id/btn_weather"
        />

</LinearLayout>